test/mips/error/compiler/test_mips_error_compiler_017.out


Error: Unterminated string literal
   ╭─[ assembly:8:33 ]
   │
 8 │     example:    .ascii "hello world
   │                        ──────┬─────┬  
   │                              ╰──────── While parsing this `string`
   │                                    │  
   │                                    ╰── Caused by this
───╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

